test(kitchen): add ci support; align to template-formula
BREAKING CHANGE: Major refactor of formula to bring it in alignment with the
template-formula. As with all substantial changes, please ensure your
existing configurations work in the ways you expect from this formula.

refactor(symlink): ensure symlink is managed good

--- a/kubernetes/files/default/environ.sh.jinja
+++ b/kubernetes/files/default/environ.sh.jinja
@@ -3,4 +3,4 @@
 # Your changes may be overwritten.
 ########################################################################
 
-{{ defaults|yaml(False) }}
+{{ environ|yaml(False) }}
