--- a/kubernetes/map.jinja
+++ b/kubernetes/map.jinja
@@ -39,6 +39,9 @@
         {%- elif comp == 'devspace' %}
             {%- set uri = '%s/v%s/%s-%s-%s'|format(d[comp]['pkg']['binary']['uri'], d[comp]['version'],
                                                     comp, grains.kernel|lower, d.arch) %}
+        {%- elif comp == 'kudo' %}
+            {%- set uri = '%s/v%s/kubectl-%s_%s_%s_%s'|format(d[comp]['pkg']['binary']['uri'], d[comp]['version'],
+                                                         comp, d[comp]['version'], grains.kernel|lower, d.arch) %}
         {%- elif comp == 'k3s' %}
             {%- set arch = '' if d.arch == 'amd64' else d.arch %}
             {%- set uri = '%s/v%s/%s-%s-%s'|format(d[comp]['pkg']['binary']['uri'], d[comp]['version'],
