--- a/kubernetes/map.jinja
+++ b/kubernetes/map.jinja
@@ -33,12 +33,20 @@
     {%- endif %}
 
     {%- if 'use_upstream_archive' in d[comp]['pkg'] and d[comp]['pkg']['use_upstream_archive'] %}
+
         {%- if comp in ('client', 'server', 'node') %}
             {%- set uri = '%s/v%s/kubernetes-%s-%s-%s.%s'|format(d[comp]['pkg']['archive']['uri'],
                            d[comp]['version'], comp, grains.kernel|lower, d.arch, d[comp]['pkg']['suffix']) %}
         {%- elif comp == 'kubebuilder' %}
             {%- set uri = '%s/v%s/%s_%s_%s_%s.%s'|format(d[comp]['pkg']['archive']['uri'], d[comp]['version'],
                           comp, d[comp]['version'], grains.kernel|lower, d.arch, d[comp]['pkg']['suffix']) %}
+        {%- elif comp in ('istio') %}
+            {%- set uri = '%s/%s/%s-%s-%s-%s.%s'|format(d[comp]['pkg']['archive']['uri'], d[comp]['version'],
+                          comp, d[comp]['version'], grains.kernel|lower, d.arch, d[comp]['pkg']['suffix']) %}
+        {%- endif %}
+
+        {%- if 'source_hash' not in d[comp]['pkg']['archive'] %}
+            {%- do d[comp]['pkg']['archive'].update({'source_hash': uri ~ '.sha256'}) %}
         {%- endif %}
         {%- do d[comp]['pkg']['archive'].update({ 'name': d.dir.archive + '/' + dirname, 'source': uri }) %}
 
@@ -59,9 +67,7 @@
                                                     comp, grains.kernel|lower, arch) %}
         {%- endif %}
 
-        {%- if 'source_hash' in d[comp]['pkg']['binary'] and d[comp]['pkg']['binary']['source_hash'] %}
-            {%- do d[comp]['pkg']['binary'].update({'source_hash': d[comp]['pkg']['binary']['source_hash']}) %}
-        {%- else %}
+        {%- if 'source_hash' not in d[comp]['pkg']['binary'] %}
             {%- do d[comp]['pkg']['binary'].update({'source_hash': uri ~ '.sha256'}) %}
         {%- endif %}
         {%- set fallback_url = uri + '/' + d[comp]['pkg']['name'] %}
