--- a/kubernetes/map.jinja
+++ b/kubernetes/map.jinja
@@ -43,6 +43,13 @@
         {%- elif comp in ('istio') %}
             {%- set uri = '%s/%s/%s-%s-%s-%s.%s'|format(d[comp]['pkg']['archive']['uri'], d[comp]['version'],
                           comp, d[comp]['version'], grains.kernel|lower, d.arch, d[comp]['pkg']['suffix']) %}
+        {%- elif comp == 'octant' %}
+            {%- set kernel = 'macOS' if grains.kernel == 'Darwin' else grains.kernel %}
+            {%- set arch = '64bit' if d.arch in ('x86_64', 'amd64') else d.arch %}
+            {%- set arch = 'arm' if d.arch|lower in ('arm',) else d.arch %}
+            {%- set arch = 'arm64' if d.arch|lower in ('arm64',) else d.arch %}
+            {%- set uri = '%s/v%s/%s_%s_%s-%s.%s'|format(d[comp]['pkg']['archive']['uri'], d[comp]['version'],
+                          comp, d[comp]['version'], kernel, arch, d[comp]['pkg']['suffix']) %}
         {%- endif %}
 
         {%- if 'source_hash' not in d[comp]['pkg']['archive'] %}
